--- a/index.html
+++ b/index.html
@@ -14,20 +14,15 @@
 
     <style>
         @media print {
-            body {
-                position: relative;
-            }
-
             body::after {
-                content: 'MillStack Watermark';
+                content: 'MillStack';
                 position: fixed;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%) rotate(-45deg);
-                font-size: 50px;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                font-size: 24px;
                 text-align: center;
                 color: rgba(12, 11, 11, 0.1);
-                z-index: 9999;
 
                 /* for image as watermark */
                 /* content: ''; */
@@ -38,7 +33,6 @@
             }
         }
     </style>
-
 
 </head>
 <body>
